@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*elasticsearch-1.3.2 (19 Aug 2014)
+
+  19 Aug 2014;  <johann@gentoo.org> +elasticsearch-1.3.2.ebuild:
+  Bumped elasticsearch
+
 *elasticsearch-1.2.1 (16 Jun 2014)
 
   16 Jun 2014;  <johann@gentoo.org> +elasticsearch-1.2.1.ebuild,
